2004-02-14  Ron Steinke  <rsteinke@w-link.net>

	* configure.in: GL test for mingw32, take 3.

2004-02-10  Ron Steinke  <rsteinke@w-link.net>

	* configure.in: GL test for mingw32, take 2.

2004-02-09  Ron Steinke  <rsteinke@w-link.net>

	* configure.in: Modifed open GL test to also work on win32.

2004-02-04  Ron Steinke  <rsteinke@w-link.net>

	* configure.in, acinclude.m4: Use new combined macro for libz, libpng,
	  SDL and SDL_image check that will also work under win32.

2003-12-03  Al Riddoch  <alriddoch@zepler.org>

	* src/edifice.cpp: Remove unused variables.

	* Update configure.in to work a bit more sanely.

2003-06-24  Al Riddoch  <alriddoch@zepler.org>

	* Modify check so OSMesa can be detected in its own lib.

2003-06-23  Al Riddoch  <alriddoch@zepler.org>

	* src/edifice.cpp, src/edifice.h: Update for strict ISO C++.

	* Update build to work more cleanly.