@@ -43,26 +43,12 @@ SDL_VERSION=1.2.0
 WF_CHECK_SDL_IMAGE($SDL_VERSION)
 dnl add flags later so we don't cause issues with SDL_main
 
-AC_LANG_PUSH(C)
+WF_CHECK_GL_LIBS
 
-AC_CHECK_LIB(GL,OSMesaCreateContext, ,
+AC_CHECK_LIB(OSMesa,OSMesaCreateContext, ,
     [
-        AC_CHECK_LIB(opengl32,OSMesaCreateContext, ,
-            [
-                AC_CHECK_LIB(OSMesa,OSMesaCreateContext, ,
-                    [
-                        AC_MSG_ERROR(Unable to find OSMesa in libGL or libOSMesa. Please make sure Mesa is available.)
-                    ])
-            ])
+        AC_MSG_ERROR(Unable to find libOSMesa. Please make sure Mesa is available.)
     ])
-
-AC_LANG_POP(C)
-
-AC_CHECK_LIB(GLU,gluPerspective, [ LIBS="$LIBS -lGLU" ],
-    AC_CHECK_LIB(glu32,gluPerspective, [ LIBS="$LIBS -lglu32" ],
-        AC_MSG_ERROR(Could not find OpenGL U library)
-    )
-)
 
 AC_CHECK_LIB(Xi, XSelectExtensionEvent)
 AC_CHECK_LIB(Xmu, XmuLookupStandardColormap)
